# krad-snr

./: .gitignore  README.md  helper.py  main.py  pyproject.toml
config/: config.yaml  test_config.yaml  test_config_outlier_removed.yaml  test_config_outlier_retained.yaml  train_config.yaml
data/XCAT_phantom/: quiero_cardiac_mrf_sim.h5  quiero_cardiac_mrf_sim_labels.csv
post_install/: deepfermi_pretrained  modified_lbfgs.py  post_install.sh
results/: SNR_est.npy  SNR_gnd.npy  nspokes.npy
script/: test_job_queue.sh  test_launcher.sh  train_job_queue.sh  train_launcher.sh
src/deepfermi/: config.py  data_generation.py  data_loading.py  dataio.py  fermi.py  main.py  save.py  test.py  tracker.py  train.py  training_manager.py  utils.py
src/deepfermi/analysis/: evaluate_measures.py  generate_img.py
src/deepfermi/network/: DeepFermi_net.py  Unet.py  layers.py
src/krad-snr/: krad_snr.py  main.py  plot_results.py  simulation.py  simulation_06.py  simulation_manager.py  utils.py
tests/: test_call.py
