[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KRadSNR"
version = "0.0.1"
description = "Reliable SNR estimation directly from k-space data in radial multi-coil MRI."
readme = "README.md"
requires-python = "<3.9"
license = { file = "LICENSE" }
keywords = ["Signal-to-noise ratio, Radial multi-coil cine MRI, PyTorch"]

authors = [
    { name = "Sherine Brahma", email = "sherine.brahma@ptb.de" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy==1.21",
    "torch==1.13",
    "scikit-image",
    "torchkbnufft==0.3.4",
    "prettytable",
    "typeguard",
    "opencv-python",
    "termcolor",
    "tqdm",
    "matplotlib",
    "scikit-learn",
    "torchvision",
    "einops",
    "imageio",
    "h5py",
]

[project.optional-dependencies]
test = [
    "coverage",
    "codecov",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
lint = ["mypy", "flake8", "isort", "pre-commit", "autopep8", "pydocstyle"]
docs = ["sphinx", "pydata-sphinx-theme", "sphinx-pyproject"]

[project.urls]
"repository" = "https://github.com/SherineBrahma/krad-snr"

# PyTest section
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
# addopts = "-n auto" # TODO: debug vscode missing tests if enabled

# MyPy section
[tool.mypy]
warn_return_any = "False"
check_untyped_defs = "True"
warn_no_return = "True"
warn_unreachable = "True"
exclude = ["docs"]

[[tool.mypy.overrides]]
module = ["ismrmrd.*", "h5py", "scipy.*"]
ignore_missing_imports = true

[tool.black]
line-length = 120
skip-string-normalization = "True"
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = ["__init__.py"]
line_length = 120
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_single_line = "True"


[tool.pydocstyle]
convention = "numpy"
add_ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
]
# select = ["D200", "D201", "D205", "D206", "D207", "D208", "D214", "D215", "D409"]

[tool.codespell]
builtin = "en-GB_to_en-US"
ignore-words-list = "te,TE"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
